recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:3: error: not found: value none
    return none
           ^Spiral:3: warning: enclosing method spiral has result type Unit: return value discarded
    return none
    ^Spiral:8: error: reassignment to val
  length=length+increment
        ^